# linear-regression-guardwatch

./: README.md
summative/api/: main.py  prediction.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  train.py
summative/flutterapp/: pubspec.yaml
summative/flutterapp/ios/Runner.xcodeproj/: project.pbxproj
summative/flutterapp/lib/: main.dart
summative/flutterapp/lib/constants/: app_colors.dart
summative/flutterapp/lib/models/: prediction_request.dart
summative/flutterapp/lib/screens/: home_screen.dart
summative/flutterapp/lib/services/: api_service.dart
summative/flutterapp/lib/widgets/: custom_dropdown.dart  custom_number_field.dart  loading_button.dart  prediction_card.dart
summative/linear_regression/: Untitled0.ipynb
summative/linear_regression/data/: ambulance_established_ems.csv
summative/linear_regression/model/: .gitignore
