[project]
name = "guardwatch-api"
version = "1.0.0"
description = "GuardWatch Emergency Response Prediction API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.139.2",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "pandas>=3.0.5",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "scikit-learn==1.6.1",
    "uvicorn>=0.51.0",
]